--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+mkdocs = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
