--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install poetry flake8
+        python -m pip install flake8
+        # Install Poetry
+        curl -sSL https://install.python-poetry.org | python3 -
         poetry install
     - name: Lint with flake8
       run: |
