--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,4 +39,4 @@ jobs:
     - name: Publish Packages
       run: |
         # Use Poetry to build the packages
-        poetry publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PASS }} --dry-run
+        poetry publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PASS }}
