--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,11 @@
 [tool.poetry]
 name = "pyecb"
-version = "0.0.2"
+version = "0.0.0"
 description = ""
 authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
+
+[tool.poetry-dynamic-versioning]
+enable = true
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -12,5 +15,5 @@ mkdocs = "^1.3.0"
 pytest = "^5.2"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
 build-backend = "poetry.core.masonry.api"
