--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ enable = true
 [tool.poetry.dependencies]
 python = "^3.9"
 mkdocs = "^1.3.0"
+poetry-dynamic-versioning = "^0.14.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
