--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8
+        python -m pip install flake8 poetry-dynamic-versioning
         # Install Poetry
         curl -sSL https://install.python-poetry.org | python3 -
         # Install the poetry dependencies
