--- a/.github/workflows/publish_packages.yaml
+++ b/.github/workflows/publish_packages.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8
+        python -m pip install flake8 poetry-dynamic-versioning
         # Install Poetry
         curl -sSL https://install.python-poetry.org | python3 -
         # Install the poetry dependencies
@@ -53,5 +53,3 @@ jobs:
       run: |
         # Use Poetry to build the packages
         poetry publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PASS }}
-
-        name: Publish Release
