--- a/.github/workflows/publish_packages.yaml
+++ b/.github/workflows/publish_packages.yaml
@@ -48,8 +48,11 @@ jobs:
     - name: Build Packages
       run: |
         # Use Poetry to build the packages
+        poetry version $(git describe --tags --abbrev=0)
         poetry build
     - name: Publish Packages
       run: |
         # Use Poetry to build the packages
         poetry publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PASS }}
+
+        name: Publish Release
