--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ enable = true
 python = "^3.9"
 mkdocs = "^1.3.0"
 poetry-dynamic-versioning = "^0.14.1"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^7.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
