--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.9"
 mkdocs = "^1.3.0"
 poetry-dynamic-versioning = "^0.14.1"
 pytest-cov = "^3.0.0"
+nose = "^1.3.7"
+mock = "^4.0.3"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
