--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ mock = "^4.0.3"
 requests = "^2.27.1"
 mkdocstrings = "^0.18.1"
 mkdocs-material = "^8.2.11"
+flake8 = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
