Force RTD to use mkdocs

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,3 +13,7 @@ build:
       - poetry config virtualenvs.create false
     post_install:
       - poetry install
+
+mkdocs:
+  configuration: mkdocs.yml
+  fail_on_warning: false
