--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,7 +11,7 @@ build:
       - asdf install poetry latest
       - asdf global poetry latest
       - poetry config virtualenvs.create false
-    pre-build:
+    pre_build:
       - pip install mkdocs==1.3.0
     post_install:
       - poetry install
