--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,6 +13,7 @@ build:
       - poetry config virtualenvs.create false
     pre_build:
       - pip install mkdocs==1.3.0
+      - pip install mkdocs-material
       - pip install mkdocs-material-extensions
       - pip install mkdocstrings-python-legacy
     post_install:
